src/components/basket-tool/style.css
/* Контрол с общими действиями */
.BasketTool {
  display: flex;
  justify-content: flex-end;
  padding: 20px;
  font-size: 18px;
}

.BasketTool-link {
  flex: 1;
  color: #0087e9;
}

.BasketTool-total {
  font-weight: bold;
  margin: 0 20px;
}

